<resources>
    <string name="app_name">Shazam Store</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_category">Categorias:</string>
    <string name="item">- Seleccion -</string>
    <string name="item_select">- Seleccion -</string>
    <string name="menu_shopping_cart">Carrito</string>
    <string name="menu_account">Cuenta</string>
    <string name="hint_username">Correo Electrónico</string>
    <string name="string_register">Registro</string>
    <string name="string_username">Username</string>
    <string name="string_telephone">Telephone</string>
    <string name="string_my_data">Mis datos</string>
    <string name="string_my_orders">Mis pedidos</string>
    <string name="string_my_shopping">Mis compras</string>
    <string name="string_about_the_company">Acerca de Shazam Store</string>
    <string name="string_go">Ir</string>
    <string name="string_question_no_account">¿Aún no tienes una cuenta?</string>
    <string name="string_question_account">¿Ya tienes una cuenta?</string>
    <string name="string_product_catalog">Catálogo de Productos</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Nombres</string>
    <string name="hint_last_name_1">Apellido Paterno</string>
    <string name="hint_last_name_2">Apellido Materno</string>
    <string name="hint_dni">DNI</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_confirm_password">Repetir Contraseña</string>
    <string name="terms_and_conditions">Términos y Condiciones</string>
    <string name="button_view">Ver</string>
    <string name="button_next">Next</string>
    <string name="button_register">Registrar</string>
    <string name="button_log_in">Ingresar</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_log_out">Cerrar Sesión</string>
    <string name="button_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="checkbox_remember_me">Recordarme</string>
    <string name="error_empty_field">Campo requerido.</string>
    <string name="error_invalid_field">Campo inválido.</string>
    <string name="error_password">La contraseña debe contener entre 6 a 20 caracteres.</string>
    <string name="error_dni">DNI debe contener 8 caracteres.</string>
    <string name="error_confirm_password">Las contraseñas no coinciden.</string>
    <string name="product_title">Title</string>
    <string name="product_description">Description text</string>
    <string name="product_price">Price text</string>
    <string name="product_availability">Availability text</string>
    <string name="product_quantity">Quantity text</string>
    <string name="required_field">Requerido</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>