<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="65dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="8dp"
    app:cardPreventCornerOverlap="true">
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="25dp"
        >
        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/app_name"
            />
        <!-- Campos del formulario -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.ShazamStore.TextInputLayout"
            android:id="@+id/email_login_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/hint_username"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/icon_email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_login_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.ShazamStore.TextInputLayout"
            android:id="@+id/password_login_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/hint_password"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/icon_lock">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_login_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="20"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">
            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/checkbox_remember_me"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/forgot_password"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/button_forgot_password"
                    android:textAllCaps="false"/>
            </RelativeLayout>
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Botones del formulario -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_log_in"
                android:textColor="@color/colorTextPrimary"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                app:iconTint="@color/black"
                app:icon="@drawable/icon_login"
                app:iconGravity="textStart"/>
            <!--<com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/button_cancel"
                android:layout_toStartOf="@id/next_button"
                android:layout_toLeftOf="@id/next_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>-->
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/text_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/string_question_no_account"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:layout_alignParentStart="true"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_new_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_register"
                android:textAllCaps="false"
                android:layout_toEndOf="@id/text_register"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
    </com.google.android.material.card.MaterialCardView>


