<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="1dp"
    app:cardPreventCornerOverlap="true">
    <LinearLayout
        android:id="@+id/linearLayout_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryLight"
            android:scaleType="centerCrop"
            android:clickable="false"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:id="@+id/product_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_title"
                android:maxLines="2"
                android:minLines="2"
                android:padding="2dp"
                android:textAppearance="?attr/textAppearanceSubtitle2"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/product_price"
                    android:textAppearance="?attr/textAppearanceBody2"/>
                <TextView
                    android:id="@+id/product_availability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:padding="2dp"
                    android:text="@string/product_availability"/>
            </RelativeLayout>
            <Button
                android:id="@+id/outlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_view"
                android:textAllCaps="true"
                android:layout_margin="2dp"
                app:strokeColor="@color/colorPrimary"
                app:icon="@drawable/icon_view"
                app:iconGravity="textStart"
                style="?attr/materialButtonOutlinedStyle"
                />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>