<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="65dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="8dp"
    app:cardPreventCornerOverlap="true">
    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="25dp"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                app:srcCompat="@drawable/icon_user_logged_in"
                android:contentDescription="@string/app_name"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/string_register"
                android:textSize="40sp"
                android:layout_gravity="center"
                android:textAlignment="center"/>
            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_marginVertical="40dp"
                android:visibility="gone"/>
            <!-- Campos del formulario -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ShazamStore.TextInputLayout"
                android:id="@+id/name_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_name"
                app:errorEnabled="true"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/icon_person">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ShazamStore.TextInputLayout"
                android:id="@+id/last_name_1_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_last_name_1"
                app:errorEnabled="true"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/icon_person">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_1_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ShazamStore.TextInputLayout"
                android:id="@+id/last_name_2_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_last_name_2"
                app:errorEnabled="true"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/icon_person">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_2_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ShazamStore.TextInputLayout"
                android:id="@+id/dni_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_dni"
                app:errorEnabled="true"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/icon_dni">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dni_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:maxLength="8"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ShazamStore.TextInputLayout"
                android:id="@+id/email_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_email"
                app:errorEnabled="true"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/icon_email">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ShazamStore.TextInputLayout"
                android:id="@+id/password_register_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_password"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/icon_lock">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_register_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="20"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ShazamStore.TextInputLayout"
                android:id="@+id/confirm_password_register_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_confirm_password"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/icon_lock">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password_register_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="20"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Botones del formulario -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_register"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    app:iconTint="@color/black"
                    app:icon="@drawable/icon_register"
                    app:iconGravity="textStart"/>
                <!--<com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/button_cancel"
                    android:layout_toStartOf="@id/next_button"
                    android:layout_toLeftOf="@id/next_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>-->
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/text_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/string_question_account"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:layout_alignParentStart="true"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_return_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_log_in"
                    android:textAllCaps="false"
                    android:layout_toEndOf="@id/text_register"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</com.google.android.material.card.MaterialCardView>