<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="65dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="8dp"
    app:cardPreventCornerOverlap="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AccountFragment"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="25dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">
            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/icon_user_logged_in"
                tools:ignore="ImageContrastCheck" />
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/button_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/image_profile"
                    android:layout_alignStart="@id/image_profile"
                    android:contentDescription="@string/button_log_out"
                    app:backgroundTint="@color/white"
                    app:elevation="5dp"
                    app:srcCompat="@drawable/icon_camera"
                    app:tint="@color/black"
                    tools:ignore="ImageContrastCheck" />
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/string_username"
                android:textSize="40sp"
                android:layout_gravity="center"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/string_telephone"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textAlignment="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="3dp"
                android:background="@color/colorSecondaryLight"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_my_data"
                    android:textSize="20sp"
                    android:layout_margin="5dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/string_go"
                    android:layout_alignParentEnd="true"
                    app:srcCompat="@drawable/icon_arrow_go"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="3dp"
                android:background="@color/colorSecondaryLight"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/string_my_orders"
                    android:textSize="20sp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/string_go"
                    android:layout_alignParentEnd="true"
                    app:srcCompat="@drawable/icon_arrow_go"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="3dp"
                android:background="@color/colorSecondaryLight"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/string_my_shopping"
                    android:textSize="20sp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/string_go"
                    android:layout_alignParentEnd="true"
                    app:srcCompat="@drawable/icon_arrow_go"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="3dp"
                android:background="@color/colorSecondaryLight"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_about_the_company"
                    android:textSize="20sp"
                    android:layout_margin="5dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/string_go"
                    android:layout_alignParentEnd="true"
                    app:srcCompat="@drawable/icon_info"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="3dp"
                android:background="@color/colorSecondaryLight"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_log_out"
                android:textColor="@color/black"
                android:backgroundTint="@color/colorPrimary"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:iconTint="@color/black"
                app:icon="@drawable/icon_log_out"
                app:iconGravity="textStart"/>
        </LinearLayout>
    </ScrollView>
</com.google.android.material.card.MaterialCardView>